[metadata]
name = twootfeed
url = https://github.com/SamR1/python-twootfeed
version = file: VERSION
description = generate a rss feed from Twitter or Mastodon search
long_description = file: README.md
long_description_content_type = text/markdown
keywords = rss, twitter, mastodon, search
license = The MIT License (MIT)
author = SamR1
platforms = linux
classifiers =
  Development Status :: 4 - Beta
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Internet :: WWW/HTTP
project_urls =
  Documentation = https://samr1.github.io/python-twootfeed

[options]
packages = find:
python_requires = >=3.8.1
zip_safe = false
setup_requires = pytest-runner
install_requires =
  beautifulsoup4==4.12.2
  feedgenerator==2.1.0
  Flask==3.0.0
  gunicorn==21.2.0
  Mastodon.py==1.8.1
  pytz==2023.3.post1
  PyYAML==6.0.1
  tweepy==4.14.0
tests_require =
  flake8
  mypy
  pytest-cov
  pytest-isort
  pytest-black
  types-pytz
  types-PyYAML
include_package_data = True

[options.extras_require]
test =
  flake8
  mypy
  pytest-cov
  pytest-isort
  pytest-black
  types-pytz
  types-PyYAML
doc =
  sphinx
  sphinx_rtd_theme
  recommonmark

[options.package_data]
twootfeed = VERSION, config.example.yml

[options.packages.find]
exclude = twootfeed.tests

[options.entry_points]
console_scripts =
  twootfeed = twootfeed.__main__:main
  twootfeed_init = twootfeed.utils.config:init_config
  twootfeed_create_mastodon_cli = twootfeed.utils.create_mastodon_client:cli

[aliases]
test = pytest

[tool:pytest]
norecursedirs = build dist .cache .eggs .git .venv

[coverage:run]
omit = .*

[coverage:report]
omit = twootfeed/tests/*

[isort]
default_section = THIRDPARTY
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
